src/msg/snapshots/twitch__msg__privmsg__tests__parse_privmsg_display_name_with_trailing_space.snap
---
source: src/msg/privmsg.rs
expression: "f(\"@rm-received-ts=1594554085918;historical=1;badge-info=;badges=;client-nonce=815810609edecdf4537bd9586994182b;color=;display-name=CarvedTaleare\\\\s;emotes=;flags=;id=c9b941d9-a0ab-4534-9903-971768fcdf10;mod=0;room-id=22484632;subscriber=0;tmi-sent-ts=1594554085753;turbo=0;user-id=467684514;user-type= :carvedtaleare!carvedtaleare@carvedtaleare.tmi.twitch.tv PRIVMSG #forsen :NaM\")"
---
Privmsg {
    channel: Channel(
        "#forsen",
    ),
    channel_id: "22484632",
    message_id: "c9b941d9-a0ab-4534-9903-971768fcdf10",
    sender: User {
        id: "467684514",
        login: "carvedtaleare",
        name: "CarvedTaleare ",
    },
    reply_to: None,
    text: "NaM",
    is_action: false,
    badges: [],
    color: None,
    bits: None,
    emotes: "",
    timestamp: 2020-07-12T11:41:25.753Z,
}
